# technologie_zdpyt82

./: MANIFEST.in  main.py  pyproject.toml  setup.py
ai/: iris_models_check.py
arytmetyka/: __init__.py  arth.py
game/: snake.py
pandas_plus/: tamperatures.py
ui/: main.py
