[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "super_projekt"
version = "0.0.3"
authors = [
    {name = "Gokuruto", email="gokuruto@gmail.com"},
]
description = "super opis"
readme="README.MD"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

